css: fix list style being too close to the sublist

--- a/src/css/_GitHub.sass
+++ b/src/css/_GitHub.sass
@@ -20,3 +20,10 @@
 
 .markdown-body code
   background-color: var(--slateA4) // rgba(27,31,35,.05)
+
+.markdown-body ol ol,
+.markdown-body ol ul,
+.markdown-body ul ol,
+.markdown-body ul ul
+  margin-bottom	: 5px
+  margin-top   	: 5px
